<resources>
    <string name="app_name">book</string>
    <string name="app_boy">男频小说</string>
    <string name="app_girl">女频小说</string>
    <string name="app_one">首页</string>
    <string name="app_tow">书架</string>
    <string name="app_three">我的</string>
    <string name="app_author">作者：pikachu</string>
    <string name="app_info_read">有5万人读过，月热度1000</string>
    <string name="app_settings_on">关于软件</string>
    <string name="app_settings_more">更多设置</string>
    <string name="app_settings_read">历史阅读</string>
    <string name="app_settings_me_book">我的书架</string>
    <string name="app_read_info">今日已阅读20分钟，继续加油哦！</string>
    <string name="app_author_str">Pikachu</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_f2_book">我的书架</string>
    <string name="app_f2_history">历史浏览</string>
    <string name="app_start_read">开始阅读</string>
    <string name="app_dialog_host_title">无此网站</string>
    <string name="app_look_jb">洁白</string>
    <string name="app_look_df">淡粉</string>
    <string name="app_look_cl">翠绿</string>
    <string name="app_look_kh">酷黑</string>
    <string name="app_look_dx">倒序</string>
    <string name="app_null">心有一切皆有，心空一切皆空</string>
</resources>