<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <View
        android:id="@+id/pager_non"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <LinearLayout
        android:id="@+id/app_bar_linear"
        app:layout_scrollFlags="scroll|enterAlways"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_below="@id/pager_non"
        android:background="@android:color/transparent"
        android:elevation="7dp"
        android:gravity="center_vertical"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/pager_main_one_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:text="@string/app_boy"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pager_main_one_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:text="@string/app_girl"
            android:textColor="@color/white_50"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pager_main_one_text3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/ic_m_s_bg"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black_50"
            android:textSize="12sp"
            android:textStyle="bold" />


    </LinearLayout>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager_main_one_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>

