<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:elevation="6dp"
    tools:targetApi="lollipop">


    <LinearLayout
        android:id="@+id/main_nar_one"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_main_one"/>
        <TextView
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/app_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/main_nar_tow"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_main_tow"/>
        <TextView
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/app_tow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/main_nar_three"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_main_three"/>
        <TextView
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/app_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>



</LinearLayout>