<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="7dp"
        tools:targetApi="lollipop"
        android:background="@color/purple_700">


        <View
            android:id="@+id/main_f2_view"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/main_f2_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:text="@string/app_f2_book"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/main_f2_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:text="@string/app_f2_history"
                android:textColor="@color/white_50"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/main_f2_text3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="36dp"
                android:layout_marginLeft="36dp"
                android:layout_marginEnd="18dp"
                android:layout_marginRight="18dp"
                android:background="@drawable/ic_m_s_bg"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/black_50"
                android:textSize="12sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/main_f2_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>